--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "python.pythonPath": "C:\\Users\\bhim\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
 }
